# scitex-path

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  DELEGATION_TEMPLATE.txt  LICENSE  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-path-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
docs/sphinx/: conf.py  index.rst  installation.rst
examples/: quickstart.py
src/scitex_path/: __init__.py  _copy_files.py  _find.py  _get_module_path.py  _getsize.py  _mk_spath.py  _split.py  _symlink.py  _this_path.py  _title2path.py  _version.py
src/scitex_path/_skills/: SKILL.md  clean.md  find.md  misc.md  spath.md  split.md  symlink.md  version.md
src/scitex_path/_skills/scitex-path/: 01_installation.md  01_quick-start.md  02_python-api.md  02_quick-start.md  03_python-api.md  10_quick-start.md  11_python-api.md  SKILL.md
src/scitex_path/_sphinx_html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
src/scitex_path/_sphinx_html/.doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
src/scitex_path/_sphinx_html/.doctrees/api/: scitex_path.doctree
src/scitex_path/_sphinx_html/_modules/: index.html
src/scitex_path/_sphinx_html/_modules/scitex_path/: _clean.html  _find.html  _get_module_path.html  _getsize.html  _mk_spath.html  _split.html  _symlink.html  _this_path.html  _version.html
src/scitex_path/_sphinx_html/_sources/: quickstart.rst.txt
src/scitex_path/_sphinx_html/_sources/api/: scitex_path.rst.txt
src/scitex_path/_sphinx_html/api/: scitex_path.html
tests/: conftest.py  test__find.py  test__get_module_path.py  test__get_spath.py  test__getsize.py  test__mk_spath.py  test__split.py  test__version.py  test_examples.py  test_skills_quality.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_examples.py  test_skills_quality.py
tests/scitex_path/: test__clean.py  test__copy_files.py  test__find.py  test__get_module_path.py  test__get_spath.py  test__getsize.py  test__increment_version.py  test__mk_spath.py  test__path.py  test__split.py  test__symlink.py  test__this_path.py  test__title2path.py  test__version.py  test_examples.py
