[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-path"
version = "0.1.5"
description = "Scientific project path utilities (find, split, symlink, versioning)"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe" },
]
keywords = ["path", "utilities", "science", "versioning", "symlink"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["numpy"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "scitex-dev>=0.7.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-path[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-path"
Repository = "https://github.com/ywatanabe1989/scitex-path"
Issues = "https://github.com/ywatanabe1989/scitex-path/issues"

[project.entry-points."scitex_dev.docs"]
scitex-path = "scitex_path"

[project.entry-points."scitex_dev.skills"]
scitex-path = "scitex_path"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_path"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]
